Fix popup menu position calculation issues

This CL changes the PopupMenuElement position calculation to use the
window's width and height instead of the visual viewport's width and
height to avoid opening menus in the incorrect position when the visual
viewport is scaled or too small.

Bug: 837436
Change-Id: Ie3f7a1d78057085f851d84d8f4049573523c0739
Reviewed-on: https://chromium-review.googlesource.com/1036799
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555101}